<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactMapActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/navbar_background"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButtonList"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/button_to_display_a_list_of_contacts"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/contactlisticon" />

        <ImageButton
            android:id="@+id/imageButtonMap"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/button_to_display_map"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/mapicon" />

        <ImageButton
            android:id="@+id/imageButtonSettings"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/button_to_display_settings"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/settingsicon" />
    </LinearLayout>

    <TextView
        android:id="@+id/addressMapTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Address:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addressMapET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="16"
        android:hint="Enter Street Address"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addressMapTV"></EditText>

    <EditText
        android:id="@+id/cityMapET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="9"
        android:hint="City"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"
        android:minHeight="48dp"
        android:nextFocusDown="@+id/stateMapET"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addressMapET"></EditText>

    <EditText
        android:id="@+id/stateMapET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:ems="2"
        android:hint="State"
        android:imeOptions="actionNext"
        android:inputType="textCapCharacters"
        android:maxLength="2"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:nextFocusDown="@+id/zipcodeMapET"
        app:layout_constraintStart_toEndOf="@+id/cityMapET"
        app:layout_constraintTop_toBottomOf="@id/addressMapET"></EditText>

    <EditText
        android:id="@+id/zipcodeMapET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:ems="5"
        android:hint="Zipcode"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLength="5"
        android:minHeight="48dp"
        android:nextFocusDown="@+id/editHome"
        app:layout_constraintStart_toEndOf="@+id/stateMapET"
        app:layout_constraintTop_toBottomOf="@id/addressMapET"></EditText>

    <Button
        android:id="@+id/buttonGetLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="Get Coordinates"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityMapET" />

    <TextView
        android:id="@+id/latitudeMapTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="Latitude:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGetLocation" />

    <TextView
        android:id="@+id/longitudeMapTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Longitude:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latitudeMapTV" />

    <TextView
        android:id="@+id/accuracyMapTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Accuracy:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longitudeMapTV" />

    <TextView
        android:id="@+id/textLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="32dp"
        android:text="None"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGetLocation" />

    <TextView
        android:id="@+id/textLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="16dp"
        android:text="None"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLatitude" />

    <TextView
        android:id="@+id/textAccuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="16dp"
        android:text="None"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLongitude" />

</androidx.constraintlayout.widget.ConstraintLayout>